Fixed an issue where local upvotes weren't showing up

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-  "BACKEND_URL": "http://localhost:3001",
-  "CLIENT_ID": "rlj63O3ovDvJGWsGz-08SA"
+  "BACKEND_URL": "https://razerchroma.gallery",
+  "CLIENT_ID": "9qOEsa5Copgv1agxvDrtgA"
 }
