Moved config values to env values.  Decline use of dotenv when in production mode.

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-  "BACKEND_URL": "https://razerchroma.gallery",
-  "CLIENT_ID": "9qOEsa5Copgv1agxvDrtgA"
+  "REACT_APP_BACKEND_URL": "http://localhost:3001",
+  "REACT_APP_CLIENT_ID": "9qOEsa5Copgv1agxvDrtgA"
 }
