--- a/.gitignore
+++ b/.gitignore
@@ -18,13 +18,13 @@
 .env.test.local
 .env.production.local
 
+# env
+.env
+.env.production
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# other test code
-new-hero.css
-new-info.css
-carousel-test.css
-carousel-test.html
+# webstorm configs
 /.idea
