--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "color-sorter": "^5.0.3",
+    "env-cmd": "^10.1.0",
     "lodash": "^4.17.21",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
